force-app/main/default/objects/smagicinteract__Message_Bubble_Setting__c/smagicinteract__Message_Bubble_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Message Bubble Setting</label>
</CustomObject>