force-app/main/default/objects/smagicinteract__Message_Bubble_Setting__c/fields/smagicinteract__Automated_Message_Color__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Automated_Message_Color__c</fullName>
    <defaultValue>&apos;Gray&apos;</defaultValue>
    <label>Automated Message Color</label>
    <length>20</length>
    <type>Text</type>
</CustomField>