force-app/main/default/objects/smagicinteract__Message_Bubble_Setting__c/fields/smagicinteract__Conversation__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Conversation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conversation</label>
    <type>Checkbox</type>
</CustomField>