force-app/main/default/objects/smagicinteract__Message_Bubble_Setting__c/fields/smagicinteract__Converse_App__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Converse_App__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Converse App</label>
    <type>Checkbox</type>
</CustomField>