force-app/main/default/objects/smagicinteract__Message_Bubble_Setting__c/fields/smagicinteract__Delivery_Status__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Delivery_Status__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Delivery Status</label>
    <type>Checkbox</type>
</CustomField>