force-app/main/default/objects/smagicinteract__Message_Bubble_Setting__c/fields/smagicinteract__Desk_Theme__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Desk_Theme__c</fullName>
    <defaultValue>&apos;DefaultTheme&apos;</defaultValue>
    <label>Desk Theme</label>
    <length>20</length>
    <type>Text</type>
</CustomField>