force-app/main/default/objects/smagicinteract__Message_Bubble_Setting__c/fields/smagicinteract__Desk_Theme_Enabled_Check__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Desk_Theme_Enabled_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Desk Theme Enabled Check</label>
    <type>Checkbox</type>
</CustomField>