force-app/main/default/objects/smagicinteract__Message_Bubble_Setting__c/fields/smagicinteract__Display_Lookup_Info__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Display_Lookup_Info__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Lookup Info</label>
    <type>Checkbox</type>
</CustomField>