force-app/main/default/objects/smagicinteract__Message_Bubble_Setting__c/fields/smagicinteract__Incoming_Username__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Incoming_Username__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Incoming_Username</label>
    <type>Checkbox</type>
</CustomField>