force-app/main/default/objects/smagicinteract__Message_Bubble_Setting__c/fields/smagicinteract__Lookup_Info__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Lookup_Info__c</fullName>
    <description>Stores MOC objects lookup information to be displayed in the message bubble.</description>
    <label>Lookup Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>