force-app/main/default/objects/smagicinteract__Message_Bubble_Setting__c/fields/smagicinteract__Outgoing_Username__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Outgoing_Username__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Outgoing_Username</label>
    <type>Checkbox</type>
</CustomField>