force-app/main/default/objects/smagicinteract__Message_Bubble_Setting__c/fields/smagicinteract__Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Phone_Number__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Phone Number</label>
    <type>Checkbox</type>
</CustomField>