force-app/main/default/objects/smagicinteract__Message_Bubble_Setting__c/fields/smagicinteract__Sender_ID__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Sender_ID__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Sender ID</label>
    <type>Checkbox</type>
</CustomField>