force-app/main/default/objects/smagicinteract__Message_Bubble_Setting__c/fields/smagicinteract__SMS_Template__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__SMS_Template__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SMS Template</label>
    <type>Checkbox</type>
</CustomField>