force-app/main/default/objects/smagicinteract__Message_Bubble_Setting__c/fields/smagicinteract__URL_Click_Count__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__URL_Click_Count__c</fullName>
    <defaultValue>false</defaultValue>
    <label>URL Click Count</label>
    <type>Checkbox</type>
</CustomField>